[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quickstart_huggingface"
version = "0.1.0"
description = "Hugging Face Transformers Federated Learning Quickstart with Flower"
authors = [
    "The Flower Authors <hello@flower.dev>",
    "Kaushik Amar Das <kaushik.das@iiitg.ac.in>"
]

[tool.poetry.dependencies]
python = "^3.8"
flwr = "^1.0.0"
torch = "2.2.1"
transformers = "4.12.2"
datasets = "1.12.1"
scikit-learn = "1.3.2"
